# GLFW-Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: computeShader.glsl
src/: main.cpp
src/Core/: application.cpp  application.h  ui.cpp  ui.h
src/Renderer/: rayTracer.cpp  rayTracer.h  renderer.cpp  renderer.h
src/Shader/: shader.cpp  shader.h
